[package]
name = "khaos-requester"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.59"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e382bc584b478092fdd53eefb9f90ea9c08a6967", features = ["json"] }
reqwest = { version = "0.11.3", features = ["json", "blocking"] }

[dev-dependencies]
httpmock = "0.6.4"
tokio = "1.14.0"